[package]
name = "varlinker"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Gaurav Sablok <gsablok@ibch.poznan.pl>"]
description = "varlinker for human genomics"
homepage = "https://github.com/IBCHgenomic/varlinker"
repository = "https://github.com/IBCHgenomic/varlinker"


[dependencies]
async-std = "1.13.1"
clap = { version = "4.5.39", features = ["derive"] }
figlet-rs = "0.1.5"
